<resources>
    <string name="app_name">My Job Pitch</string>
    <string name="title_activity">My Job Pitch</string>
    <string name="recruiter">Recruiter</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="prompt_email">Email address</string>
    <string name="create_profile">Create profile</string>
    <string name="create_employer">I need staff</string>
    <string name="create_job_seeker">Get a job</string>
    <string name="prompt_business_name">Name</string>
    <string name="prompt_location_name">Name</string>
    <string name="prompt_location_description">Description</string>
    <string name="prompt_telephone">Telephone (optional)</string>
    <string name="prompt_mobile">Mobile (optional)</string>
    <string name="location_details">Work Place &amp; Details</string>
    <string name="public_data">Public</string>
    <string name="business_details">Company Details</string>
    <string name="title_create_profile">Create Profile</string>
    <string name="businesses">Companies</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="business">Company</string>
    <string name="action_save">Save</string>
    <string name="edit_business">Edit Company</string>
    <string name="work_place">Work Place</string>
    <string name="action_add_business">Add Company</string>
    <string name="locations">Work Places</string>
    <string name="edit_location">Edit Work Place</string>
    <string name="action_add_location">Add Work Place</string>
    <string name="job">Job</string>
    <string name="action_add_job">Add Job</string>
    <string name="prompt_job_title">Title</string>
    <string name="job_details">Job Details</string>
    <string name="job_seeker_details">Job Seeker Profile</string>
    <string name="prompt_job_description">Description</string>
    <string name="edit_job">Edit Job</string>
    <string name="removejob">Remove Job</string>
    <string name="jobs">Jobs</string>
    <string name="profile">Profile</string>
    <string name="prompt_job_seeker_first_name">First Name</string>
    <string name="prompt_job_seeker_last_name">Last Name</string>
    <string name="prompt_age">Age (optional)</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="prompt_sector">Job sector</string>
    <string name="prompt_hours">Hours</string>
    <string name="prompt_contract">Contract</string>
    <string name="sex">Sex</string>
    <string name="nationality">Nationality</string>
    <string name="prompt_nationality">Nationality (optional)</string>
    <string name="prompt_sex">Sex (optional)</string>
    <string name="action_edit_search">Change search</string>
    <string name="job_search_profile">Job Match Profile</string>
    <string name="prompt_sectors">Choose a job sector</string>
    <string name="applied">Applied</string>
    <string name="shortlisted">Shortlisted</string>
    <string name="messages">Messages</string>
    <string name="connect">Connect</string>
    <string name="apply">Apply</string>
    <string name="remove">Remove</string>
    <string name="shortlist">Shortlist</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="next">Next</string>
    <string name="removed_from_shortlist">Removed from shortlist</string>
    <string name="added_to_shortlist">Added to shortlist</string>
    <string name="location">Location</string>
    <string name="location_required">Location (required)</string>
    <string name="not_set">Not set</string>
    <string name="title_activity_select_place">Selection location</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="custom_location">Custom Location</string>
    <string name="prompt_location_address">Address (optional)</string>
    <string name="confirm_logout">This will log you out. Are you sure?</string>
    <string name="confirm_update_address">Would you like to use the address details provided by Google?\n%1$s?</string>
    <string name="ok">OK</string>
    <string name="no_thanks">No thanks</string>
    <string name="logout">Logout</string>
    <string name="any">Any</string>
    <string name="search_location">Search Location</string>
    <string name="select_distance">Select distance</string>
    <string name="setup_profile_and_pitch_message">You have not yet setup your job preferences or recorded your pitch, once we have this information, you will see job matches here, and potential employers will be able to find you.</string>
    <string name="record_pitch_message">You have not yet recorded your pitch, once we have this, you will see job matches here, and potential employers will be able to find you.</string>
    <string name="setup_profile_message">You have not yet setup your job preferences, once we know your search criteria, you will see job matches here, and potential employers will be able to find you.</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="record_pitch">Record my pitch</string>
    <string name="no_locations_added_message">You have not added any work places for this company.</string>
    <string name="no_jobs_added_message">You have not added any jobs for this location.</string>
    <string name="no_connections_message">You have not chosen anyone to connect with for this job. Once that happens, you will be able to sort through them from here. You can switch to search mode to look for potential applicants.</string>
    <string name="no_applications_message">No candidates have yet expressed an interest in this job. Once that happens, you will be able to sort through them from here. You can switch to search mode to look for potential applicants.</string>
    <string name="switch_to_search_mode">Switch to search mode</string>
    <string name="restart_search">Restart search</string>
    <string name="switch_to_application_mode">Switch to application mode</string>
    <string name="no_matching_candidates_message">There are no more potential candidates that match this job. You can switch to application mode to see the people who have connected with you, or restart the search.</string>
    <string name="no_shortlisted_applications_message">You have not shortlisted any applications for this job, turn off shortlist view to see the non-shortlisted applications.</string>
    <string name="turn_off_shortlist_view">Turn off shortlist view</string>
    <string name="remove_job_seeker_message">Are you sure you want to remove %1$s? This job seeker will never appear again for this job.\nIf you want this item to appear again in later searches, just swipe to the right to remove temporarily.</string>
    <string name="remove_job_message">Are you sure you want to remove %1$s? This job will never appear again.\nIf you want this job to appear again in later searches, just swipe to the right to remove temporarily.</string>
    <string name="no_matching_jobs_message">There are no more jobs that match your profile. You can restart the search to restore all the jobs you\'ve dismissed, or got to the message centre to check the status of your applications.</string>
    <string name="action_messages">Messages</string>
    <string name="no_image">no image</string>
    <string name="company_image">Company Logo</string>
    <string name="change">Change</string>
    <string name="location_image">Work Place Image</string>
    <string name="job_image">Job Image</string>
    <string name="no_conversations">You have no messages!  Once you have connected through the main interface with someone, you\'ll be able to communicate with them here.</string>
    <string name="no_messages">No messages</string>
    <string name="message_thread">Messages</string>
    <string name="send">Send</string>
    <string name="applied_job_seekers">Showing connected job seekers</string>
    <string name="shortlisted_job_seekers">Showing shortlisted job seekers</string>
    <string name="job_seeker_search">Job seeker search</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_job_profile">Edit job profile</string>
    <string name="logging_in">Logging in...</string>
    <string name="loading_data">Loading data... (%1$s%%)</string>
    <string name="creating_account">Creating account...</string>
    <string name="rotate">rotate</string>
    <string name="get_ready">Get ready!</string>
    <string name="pre_record_message">Before recording starts, you will get a %1$s second countdown to get ready. The recording will stop automatically after %2$s seconds, or if you hit the stop button.</string>
    <string name="record_new_pitch">Record new pitch</string>
    <string name="no_pitch">no recording</string>
    <string name="record_pitch_title">Record My Pitch</string>
    <string name="record_pitch_intro">Here you can record your 30 second pitch. This 30 second video will be viewed by prospective employers.</string>
    <string name="upload">Upload</string>
    <string name="discard_recording_prompt">Are you sure you want to discard your recording?</string>
    <string name="start_recording_prompt">You have a pitch recorded but not uploaded. A new recording will replace this.</string>
    <string name="uploading">Uploading... (%1$s%%)</string>
    <string name="action_record_pitch">Record My Pitch</string>
    <string name="home">Home</string>
    <string name="processing">Processing...</string>
    <string name="map_error">Error starting google maps!</string>
    <string name="search_location_hint">In order to match you with jobs in your area, you must tell us your location, and specify the maximum distance to search.</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete %1$s?</string>
    <string name="got_it">Got it!</string>
    <string name="select_place_explainer">Search for a location, or long-press on the map to manually select a location.</string>
    <string name="error_upload_in_progress">Error: pitch upload in progress!</string>
    <string name="my_jobs">My jobs</string>
    <string name="characters_remaining">%1$s characters remaining</string>
    <string name="image_set_by_business">image set by company</string>
    <string name="image_set_by_location">image set by work place</string>
    <string name="delete_image_confirmation">Are you sure you want to remove this image?</string>
    <string name="select_sectors">Select job sectors</string>
    <string name="error_starting_upload">Error starting upload!</string>
    <string name="starting_upload">Starting upload...</string>
    <string name="cancel_upload_prompt">This will cancel your current upload! Continue?</string>
    <string name="description">Description</string>
    <string name="job_seeker_description_hint">State your employers (0-3), your role, time at each employer and short about your personality.</string>
    <string name="no_active_jobs">No active jobs</string>
    <string name="no_inactive_jobs">No inactive jobs</string>
    <string name="cant_view_inactive_job">You can\'t view an inactive job!</string>
    <string name="inactive">Inactive</string>
    <string name="remember_password">Remember password</string>
    <string name="active">Active</string>
    <string name="action_edit_business">Edit Company</string>
    <string name="action_edit_location">Edit Work Place</string>
    <string name="action_change_password">Password Change</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
</resources>