<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".JobProfileEditFragment">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/job_search_profile"
        android:textSize="25sp"
        android:paddingBottom="8dp"
        android:textStyle="bold" />

    <com.myjobpitch.widgets.NoDefaultSpinner
        android:prompt="@string/prompt_sectors"
        android:id="@+id/job_profile_sectors" android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:prompt="@string/prompt_contract"
        android:id="@+id/job_profile_contract" android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:prompt="@string/prompt_hours"
        android:id="@+id/job_profile_hours" android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/search_location"
        android:textSize="20sp"
        android:paddingTop="15dp"
        android:paddingBottom="8dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/place"
            android:text="@string/not_set"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:paddingLeft="15dp"
            android:layout_marginRight="5dp" />
        <ImageButton
            android:id="@+id/place_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_dialog_map" />

    </LinearLayout>

    <Spinner
        android:id="@+id/select_radius"
        android:prompt="@string/select_distance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </Spinner>

</LinearLayout>
