<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".RecruiterProfileFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0">

        <TableRow>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/location_details"
                android:textSize="25sp"
                android:textColor="@color/mjp_teal"
                android:paddingBottom="8dp"
                android:textStyle="bold" />
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/public_data" />
        </TableRow>

        <TableRow>
            <EditText android:id="@+id/location_name" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_location_name"
                android:inputType="text" android:maxLines="1"
                android:singleLine="true" />
            <CheckBox android:layout_gravity="right" android:enabled="false"
                android:checked="true" />
        </TableRow>

        <TableRow>
            <EditText android:id="@+id/location_description" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_location_description"
                android:inputType="textMultiLine" android:maxLines="5"
                android:singleLine="true" />
            <CheckBox android:layout_gravity="right" android:enabled="false"
                android:checked="true" />
        </TableRow>


        <TableRow>
            <EditText android:id="@+id/location_address" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_location_address"
                android:inputType="textMultiLine" android:maxLines="5"
                android:singleLine="true" />
            <CheckBox
                android:id="@+id/location_address_public"
                android:layout_gravity="right"
                android:checked="true" />
        </TableRow>

        <TableRow>
            <EditText android:id="@+id/location_email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" />
            <CheckBox
                android:id="@+id/location_email_public"
                android:checked="true"
                android:layout_gravity="right" />
        </TableRow>

        <TableRow>
            <EditText android:id="@+id/location_telephone" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_telephone"
               android:inputType="phone" android:maxLines="1"
                android:singleLine="true" />
            <CheckBox
                android:id="@+id/location_telephone_public"
                android:checked="true"
                android:layout_gravity="right" />
        </TableRow>

        <TableRow>
            <EditText android:id="@+id/location_mobile" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_mobile"
                android:inputType="phone" android:maxLines="1"
                android:singleLine="true" />
            <CheckBox
                android:id="@+id/location_mobile_public"
                android:checked="true"
                android:layout_gravity="right" />
        </TableRow>
    </TableLayout>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/location_required"
        android:textColor="@color/mjp_teal"
        android:textSize="20sp"
        android:paddingTop="15dp"
        android:paddingBottom="8dp"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/location_place_button"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/location_place"
            android:text="@string/not_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_dialog_map" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_image"
        android:textColor="@color/mjp_teal"
        android:textSize="20sp"
        android:paddingTop="15dp"
        android:paddingBottom="8dp"
        android:textStyle="bold" />

    <fragment
        android:name="com.myjobpitch.fragments.ImageEditFragment"
        android:id="@+id/image_edit_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_image_edit" />

</LinearLayout>
