<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LocationListActivity">

    <item
        android:id="@+id/action_messages"
        android:icon="@drawable/ic_action_email"
        android:title="@string/action_messages"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_add"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit_location"
        android:icon="@drawable/ic_action_edit_light"
        android:title="@string/action_edit_location"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
