<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".JobSeekerActivity">
    <item
        android:id="@+id/action_messages"
        android:icon="@drawable/ic_action_email"
        android:title="@string/action_messages"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit_job_profile"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_edit_search"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit_profile"
        android:icon="@drawable/ic_action_edit_light"
        android:title="@string/action_edit_profile"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
</menu>
