<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".RecruiterProfileFragment">

    <ScrollView android:id="@+id/recruiter_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <AutoCompleteTextView android:id="@+id/business_name" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_business_name"
                android:inputType="text" android:maxLines="1"
                android:singleLine="true" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0">

                <TableRow>
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:text="@string/location_details" />
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:text="@string/public_data" />
                </TableRow>
                <TableRow>
                    <EditText android:id="@+id/location_name" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/prompt_location_name"
                        android:inputType="text" android:maxLines="1"
                        android:singleLine="true" />
                    <CheckBox android:layout_gravity="right" android:enabled="false" />
                </TableRow>

                <TableRow>
                    <EditText android:id="@+id/location_description" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/prompt_location_description"
                        android:inputType="textMultiLine" android:maxLines="5"
                        android:singleLine="true" />
                    <CheckBox android:layout_gravity="right" android:enabled="false" />
                </TableRow>

                <TableRow>
                    <EditText android:id="@+id/location_email" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress" android:maxLines="1"
                        android:singleLine="true" />
                    <CheckBox android:id="@+id/location_email_public" android:layout_gravity="right" />
                </TableRow>

                <TableRow>
                    <EditText android:id="@+id/location_telephone" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/prompt_telephone"
                       android:inputType="phone" android:maxLines="1"
                        android:singleLine="true" />
                    <CheckBox android:id="@+id/location_telephone_public" android:layout_gravity="right" />
                </TableRow>

                <TableRow>
                    <EditText android:id="@+id/location_mobile" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/prompt_mobile"
                        android:inputType="phone" android:maxLines="1"
                        android:singleLine="true" />
                    <CheckBox android:id="@+id/location_mobile_public" android:layout_gravity="right" />
                </TableRow>

            </TableLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_continue"
                android:id="@+id/continue_button"
                android:layout_weight="1"
                style="?android:textAppearanceSmall" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
